--- a/pages/page2.html
+++ b/pages/page2.html
@@ -47,9 +47,8 @@
             />
             <h2>Caja de chocolates</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Quibusdam, impedit! Odio, repudiandae sint autem ab facilis
-              aliquid voluptatem earum delectus!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut,
+              accusamus.
             </p>
           </div>
         </section>
@@ -63,9 +62,8 @@
             />
             <h2>Pan dulce</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur
-              velit distinctio animi, eligendi iure omnis aperiam culpa.
-              Molestias, voluptates excepturi.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
+              sint?
             </p>
           </div>
         </section>
@@ -79,9 +77,8 @@
             />
             <h2>Pastafrola</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
-              cupiditate porro delectus, eos amet dolor vel cumque voluptates
-              alias magnam?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+              voluptates.
             </p>
           </div>
         </section>
@@ -95,9 +92,8 @@
             />
             <h2>Ramo de rosas de chocolate</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-              doloremque incidunt eos architecto? Ipsa natus libero, a deserunt
-              saepe illo!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+              quasi.
             </p>
           </div>
         </section>
@@ -111,9 +107,8 @@
             />
             <h2>Box dulce</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Necessitatibus, modi consectetur. Atque ad natus, quis sapiente
-              facere eos placeat dicta.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic,
+              ipsa.
             </p>
           </div>
         </section>
