--- a/pages/page3.html
+++ b/pages/page3.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cositas saladas</title>
+    
     <link rel="stylesheet" href="../styles/styles.css" />
     <link
       rel="shortcut icon"
@@ -16,7 +17,7 @@
   <body>
     <header>
       <nav>
-        <img class="logo" src="../assets/img/logo.jpeg" />
+        <img class="logo" src="../assets/img/logo-remove.png" />
         <ul>
           <li><a class="navLink" href="../index.html">Menu principal</a></li>
           <li><a class="navLink" href="../pages/page1.html">Contacto</a></li>
@@ -39,32 +40,57 @@
       <h1>Exquisitas Dulzuras</h1>
       <div class="articulosSalado">
         <section class="cardSalado">
-          <img
-            class="imgSalado"
-            src="../assets/img/pizzetas.jpg"
-            alt="imagen de pizzetas"
-          />
-          <h2>Pizzetas</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
-            officiis in quod asperiores ullam, obcaecati atque amet nam
-            provident quam.
-          </p>
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="../assets/img/pizzetas.jpg"
+                  class="img-fluid rounded-start"
+                  alt="imagen de pizzetas"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Pizzetas</h5>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Veniam, eligendi.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted"
+                      >Última actualización hace 3 minutos</small
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
 
         <section class="cardSalado">
-          <img
-            class="imgSalado"
-            src="../assets/img/boxsalado.jpg"
-            alt="box salado"
-          />
-          <h2>Box salado</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum rem
-            eaque et, numquam perferendis reiciendis! Sequi alias nam molestias
-            voluptates!
-          </p>
-        </section>
+      <div class="card mb-3" style="max-width: 540px">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="../assets/img/boxsalado.jpg"
+              class="img-fluid rounded-start"
+              alt="box salado"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Box salado</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, delectus?
+              </p>
+              <p class="card-text">
+                <small class="text-muted"
+                  >Última actualización hace 3 minutos</small
+                >
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
