--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="assets/img/favicon.png"
       type="image/x-icon"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
@@ -18,17 +24,23 @@
       <header>
         <nav>
           <img class="logo" src="./assets/img/logo-remove.png" />
-          <ul>
-            <li>
-              <a class="navLink active" href="./index.html">Menu principal</a>
+          <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html"
+                >Menu principal</a
+              >
             </li>
-            <li><a class="navLink" href="./pages/page1.html">Contacto</a></li>
-            <li>
-              <a class="navLink" href="./pages/page2.html">Cositas dulces</a>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/page1.html">Contacto</a>
             </li>
-            <li><a class="navLink" href="./pages/page3.html">Box Salado</a></li>
-            <li>
-              <a class="navLink" href="./pages/page4.html">Medios de pago</a>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/page2.html">Cositas dulces</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/page3.html">Box Salado</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/page4.html">Medios de pago</a>
             </li>
           </ul>
         </nav>
