--- a/pages/page2.html
+++ b/pages/page2.html
@@ -11,12 +11,18 @@
       href="../assets/img/favicon.png"
       type="image/x-icon"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
     <header>
       <nav>
-        <img class="logo" src="../assets/img/logo.jpeg" />
+        <img class="logo" src="../assets/img/logo-remove.png" />
         <ul>
           <li><a class="navLink" href="../index.html">Menu principal</a></li>
           <li><a class="navLink" href="../pages/page1.html">Contacto</a></li>
@@ -38,81 +44,102 @@
     <main>
       <h1>Exquisitas Dulzuras</h1>
       <div class="articulosDulce">
-        <section class="cardDulce">
-          <div>
-            <img
-              class="imgDulce"
-              src="../assets/img/chocolatesderegalo.jpg"
-              alt="caja de chocolates"
-            />
-            <h2>Caja de chocolates</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut,
-              accusamus.
-            </p>
+        <section>
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="../assets/img/chocolatesderegalo.jpg"
+                  class="img-fluid rounded-start"
+                  alt="caja de chocolates"
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Caja de chocolates</h5>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut,
+                    accusamus.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <div class="cardDulce">
-            <img
-              class="imgDulce"
-              src="../assets/img/pandulce.jpg"
-              alt="foto de pan dulce"
-            />
-            <h2>Pan dulce</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-              sint?
-            </p>
-          </div>
-        </section>
-
-        <section>
-          <div class="cardDulce">
-            <img
-              class="imgDulce"
-              src="../assets/img/pastrafrola.jpg"
-              alt="imagen de pastafrola"
-            />
-            <h2>Pastafrola</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-              voluptates.
-            </p>
-          </div>
-        </section>
-
-        <section>
-          <div class="cardDulce">
-            <img
-              class="imgDulce"
-              src="../assets/img/rosasdechocolate.jpg"
-              alt="ramo de rosas de chocolate"
-            />
-            <h2>Ramo de rosas de chocolate</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
-              quasi.
-            </p>
-          </div>
-        </section>
-
-        <section>
-          <div class="cardDulce">
-            <img
-              class="imgDulce"
-              src="../assets/img/boxdulce.jpg"
-              alt="Box dulce"
-            />
-            <h2>Box dulce</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic,
-              ipsa.
-            </p>
-          </div>
-        </section>
+          <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="../assets/img/pandulce.jpg" class="img-fluid rounded-start" alt="foto de pan dulce">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Pan dulce</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,sint?</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
+    </div>
+  </div>
+</div>
+        </section>
+
+        <section>
+          <div class="">
+          <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="../assets/img/pastrafrola.jpg" class="img-fluid rounded-start" alt="imagen de pastafrola">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Pastafrola</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,voluptates</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+        </section>
+
+        <section>
+          <div class="">
+          <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="../assets/img/rosasdechocolate.jpg" class="img-fluid rounded-start" alt="ramo de rosas de chocolate">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Ramo de rosas de chocolate</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,quasi.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+</div>
+        </section>
+
+        <section>
+          <div class="">
+      <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="../assets/img/boxdulce.jpg" class="img-fluid rounded-start" alt="Box dulce">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Box dulce</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic,ipsa.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
+      </div>
+        </section>
     </main>
 
     <footer>
