--- a/pages/page4.html
+++ b/pages/page4.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav>
-        <img class="logo" src="../assets/img/logo.jpeg" />
+        <img class="logo" src="../assets/img/logo-remove.png" />
         <ul>
           <li><a class="navLink" href="../index.html">Menu principal</a></li>
           <li><a class="navLink" href="../pages/page1.html">Contacto</a></li>
